--- a/prisoners-dilemma.ipynb
+++ b/prisoners-dilemma.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8b1553b3",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cd417d40",
    "metadata": {},
    "outputs": [],
@@ -53,6 +53,9 @@
     "        self.history = []\n",
     "        self.player1_earnings = 0\n",
     "        self.player2_earnings = 0\n",
+    "        \n",
+    "        # Token counter\n",
+    "        self.total_tokens = 0\n",
     "        \n",
     "        # Base prompt for the dilemma\n",
     "        self.base_prompt = \"\"\"\n",
@@ -88,6 +91,11 @@
     "                messages=messages\n",
     "            )\n",
     "            choice = response.choices[0].message.content.strip()\n",
+    "            \n",
+    "            # Track token usage\n",
+    "            if hasattr(response, 'usage') and response.usage:\n",
+    "                tokens_used = getattr(response.usage, 'total_tokens', 0)\n",
+    "                self.total_tokens += tokens_used\n",
     "            \n",
     "            # Normalize the response\n",
     "            choice_lower = choice.lower()\n",
@@ -213,6 +221,7 @@
     "        self.history = []\n",
     "        self.player1_earnings = 0\n",
     "        self.player2_earnings = 0\n",
+    "        self.total_tokens = 0\n",
     "        \n",
     "        # Play rounds\n",
     "        for round_num in range(1, num_rounds + 1):\n",
@@ -247,7 +256,9 @@
     "            print(f\"  Round {round_data['round']}: \"\n",
     "                  f\"{self.player1_model} {round_data['player1_choice']}, \"\n",
     "                  f\"{self.player2_model} {round_data['player2_choice']} → \"\n",
-    "                  f\"${round_data['player1_payoff']} vs ${round_data['player2_payoff']}\")"
+    "                  f\"${round_data['player1_payoff']} vs ${round_data['player2_payoff']}\")\n",
+    "        \n",
+    "        print(f\"\\nTotal tokens used: {self.total_tokens}\")"
    ]
   },
   {
@@ -255,7 +266,111 @@
    "execution_count": null,
    "id": "62482392",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "Starting Prisoner's Dilemma Game\n",
+      "Player 1: gemma3:270m\n",
+      "Player 2: gemma3:270m\n",
+      "Rounds: 5\n",
+      "============================================================\n",
+      "\n",
+      "--- Round 1 ---\n",
+      "Querying gemma3:270m...\n",
+      "gemma3:270m chose: Steal\n",
+      "Querying gemma3:270m...\n",
+      "gemma3:270m chose: Steal\n",
+      "\n",
+      "Results:\n",
+      "  gemma3:270m: Steal → $0\n",
+      "  gemma3:270m: Steal → $0\n",
+      "\n",
+      "Total earnings so far:\n",
+      "  gemma3:270m: $0\n",
+      "  gemma3:270m: $0\n",
+      "\n",
+      "--- Round 2 ---\n",
+      "Querying gemma3:270m...\n",
+      "gemma3:270m chose: Share\n",
+      "Querying gemma3:270m...\n",
+      "gemma3:270m chose: Share\n",
+      "\n",
+      "Results:\n",
+      "  gemma3:270m: Share → $1000\n",
+      "  gemma3:270m: Share → $1000\n",
+      "\n",
+      "Total earnings so far:\n",
+      "  gemma3:270m: $1000\n",
+      "  gemma3:270m: $1000\n",
+      "\n",
+      "--- Round 3 ---\n",
+      "Querying gemma3:270m...\n",
+      "gemma3:270m chose: Steal\n",
+      "Querying gemma3:270m...\n",
+      "gemma3:270m chose: Share\n",
+      "\n",
+      "Results:\n",
+      "  gemma3:270m: Steal → $2000\n",
+      "  gemma3:270m: Share → $0\n",
+      "\n",
+      "Total earnings so far:\n",
+      "  gemma3:270m: $3000\n",
+      "  gemma3:270m: $1000\n",
+      "\n",
+      "--- Round 4 ---\n",
+      "Querying gemma3:270m...\n",
+      "gemma3:270m chose: Steal\n",
+      "Querying gemma3:270m...\n",
+      "gemma3:270m chose: Steal\n",
+      "\n",
+      "Results:\n",
+      "  gemma3:270m: Steal → $0\n",
+      "  gemma3:270m: Steal → $0\n",
+      "\n",
+      "Total earnings so far:\n",
+      "  gemma3:270m: $3000\n",
+      "  gemma3:270m: $1000\n",
+      "\n",
+      "--- Round 5 ---\n",
+      "Querying gemma3:270m...\n",
+      "Warning: Unclear response 'True' from gemma3:270m, defaulting to Share\n",
+      "gemma3:270m chose: Share\n",
+      "Querying gemma3:270m...\n",
+      "gemma3:270m chose: Steal\n",
+      "\n",
+      "Results:\n",
+      "  gemma3:270m: Share → $0\n",
+      "  gemma3:270m: Steal → $2000\n",
+      "\n",
+      "Total earnings so far:\n",
+      "  gemma3:270m: $3000\n",
+      "  gemma3:270m: $3000\n",
+      "\n",
+      "============================================================\n",
+      "FINAL RESULTS\n",
+      "============================================================\n",
+      "\n",
+      "Total Earnings:\n",
+      "  gemma3:270m: $3000\n",
+      "  gemma3:270m: $3000\n",
+      "\n",
+      "Winner: Tie\n",
+      "\n",
+      "Round-by-round breakdown:\n",
+      "  Round 1: gemma3:270m Steal, gemma3:270m Steal → $0 vs $0\n",
+      "  Round 2: gemma3:270m Share, gemma3:270m Share → $1000 vs $1000\n",
+      "  Round 3: gemma3:270m Steal, gemma3:270m Share → $2000 vs $0\n",
+      "  Round 4: gemma3:270m Steal, gemma3:270m Steal → $0 vs $0\n",
+      "  Round 5: gemma3:270m Share, gemma3:270m Steal → $0 vs $2000\n",
+      "\n",
+      "Total tokens used: 1871\n"
+     ]
+    }
+   ],
    "source": [
     "# Create and play the game\n",
     "# You can change the models to any Ollama models you have installed\n",
@@ -298,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mydata-py",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
