feat: payoff param

--- a/prisoners-dilemma.ipynb
+++ b/prisoners-dilemma.ipynb
@@ -36,7 +36,8 @@
     "    Each model can choose to \"Share\" or \"Steal\" in each round.\n",
     "    \"\"\"\n",
     "    \n",
-    "    def __init__(self, player1_model, player2_model, ollama_client):\n",
+    "    def __init__(self, player1_model, player2_model, ollama_client, \n",
+    "                 both_share_payoff=3000, steal_win_payoff=5000, steal_lose_payoff=0, both_steal_payoff=1000):\n",
     "        \"\"\"\n",
     "        Initialize the game with two players and their models.\n",
     "        \n",
@@ -44,10 +45,20 @@
     "            player1_model: Model name for player 1 (e.g., \"phi3:medium\")\n",
     "            player2_model: Model name for player 2 (e.g., \"llama2\")\n",
     "            ollama_client: The Ollama OpenAI client instance\n",
+    "            both_share_payoff: Payoff for each player when both choose Share (default: 1000)\n",
+    "            steal_win_payoff: Payoff for the stealer when one steals and one shares (default: 2000)\n",
+    "            steal_lose_payoff: Payoff for the sharer when one steals and one shares (default: 0)\n",
+    "            both_steal_payoff: Payoff for each player when both choose Steal (default: 0)\n",
     "        \"\"\"\n",
     "        self.player1_model = player1_model\n",
     "        self.player2_model = player2_model\n",
     "        self.ollama = ollama_client\n",
+    "        \n",
+    "        # Payoff parameters\n",
+    "        self.both_share_payoff = both_share_payoff\n",
+    "        self.steal_win_payoff = steal_win_payoff\n",
+    "        self.steal_lose_payoff = steal_lose_payoff\n",
+    "        self.both_steal_payoff = both_steal_payoff\n",
     "        \n",
     "        # Store game history\n",
     "        self.history = []\n",
@@ -57,12 +68,16 @@
     "        # Token counter\n",
     "        self.total_tokens = 0\n",
     "        \n",
-    "        # Base prompt for the dilemma\n",
-    "        self.base_prompt = \"\"\"\n",
+    "        # Base prompt for the dilemma (will be generated dynamically)\n",
+    "        self._update_base_prompt()\n",
+    "    \n",
+    "    def _update_base_prompt(self):\n",
+    "        \"\"\"Update the base prompt with current payoff values.\"\"\"\n",
+    "        self.base_prompt = f\"\"\"\n",
     "You and a partner are contestants on a game show. You're each taken to separate rooms and given a choice:\n",
-    "Cooperate: Choose \"Share\" — if both of you choose this, you each win $1,000.\n",
-    "Defect: Choose \"Steal\" — if one steals and the other shares, the stealer gets $2,000 and the sharer gets nothing.\n",
-    "If both steal, you both get nothing.\n",
+    "Cooperate: Choose \"Share\" — if both of you choose this, you each win ${self.both_share_payoff:,}.\n",
+    "Defect: Choose \"Steal\" — if one steals and the other shares, the stealer gets ${self.steal_win_payoff:,} and the sharer gets ${self.steal_lose_payoff:,}.\n",
+    "If both steal, you both get ${self.both_steal_payoff:,}.\n",
     "Do you choose to Steal or Share? Answer only with the word Steal or Share.\n",
     "\"\"\"\n",
     "    \n",
@@ -119,13 +134,13 @@
     "            (player1_payoff, player2_payoff)\n",
     "        \"\"\"\n",
     "        if choice1 == \"Share\" and choice2 == \"Share\":\n",
-    "            return (1000, 1000)\n",
+    "            return (self.both_share_payoff, self.both_share_payoff)\n",
     "        elif choice1 == \"Steal\" and choice2 == \"Share\":\n",
-    "            return (2000, 0)\n",
+    "            return (self.steal_win_payoff, self.steal_lose_payoff)\n",
     "        elif choice1 == \"Share\" and choice2 == \"Steal\":\n",
-    "            return (0, 2000)\n",
+    "            return (self.steal_lose_payoff, self.steal_win_payoff)\n",
     "        else:  # Both Steal\n",
-    "            return (0, 0)\n",
+    "            return (self.both_steal_payoff, self.both_steal_payoff)\n",
     "    \n",
     "    def build_history_context(self, is_player1=True):\n",
     "        \"\"\"\n",
@@ -374,11 +389,21 @@
    "source": [
     "# Create and play the game\n",
     "# You can change the models to any Ollama models you have installed\n",
+    "# You can also customize the payoffs:\n",
+    "#   both_share_payoff: What each player gets when both Share (default: 1000)\n",
+    "#   steal_win_payoff: What the stealer gets when one Steals and one Shares (default: 2000)\n",
+    "#   steal_lose_payoff: What the sharer gets when one Steals and one Shares (default: 0)\n",
+    "#   both_steal_payoff: What each player gets when both Steal (default: 0)\n",
     "\n",
     "game = PrisonersDilemmaGame(\n",
     "    player1_model=\"phi3:medium\",  # Change to your preferred model\n",
     "    player2_model=\"gemma3:270m\",  # Change to a different model if you want\n",
-    "    ollama_client=ollama\n",
+    "    ollama_client=ollama,\n",
+    "    # Optional: customize payoffs (using defaults if not specified)\n",
+    "    # both_share_payoff=1000,\n",
+    "    # steal_win_payoff=2000,\n",
+    "    # steal_lose_payoff=0,\n",
+    "    # both_steal_payoff=0\n",
     ")\n",
     "\n",
     "# Play 5 rounds (you can change this number)\n",
