--- a/geopolitics3.ipynb
+++ b/geopolitics3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f95ede3b",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8b1553b3",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cd417d40",
    "metadata": {},
    "outputs": [],
@@ -625,6 +625,183 @@
     "\n",
     "# Play 10 turns (you can change this number)\n",
     "game.play_game(num_turns=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8de2cae8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'inbrowser' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 156\u001b[39m\n\u001b[32m    150\u001b[39m     next_btn.click(\n\u001b[32m    151\u001b[39m         fn=advance_turn,\n\u001b[32m    152\u001b[39m         outputs=[turn_info, player1, player2, player3, player4, player5, history]\n\u001b[32m    153\u001b[39m     )\n\u001b[32m    155\u001b[39m \u001b[38;5;66;03m# Launch the interface\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m156\u001b[39m demo.launch(\u001b[43minbrowser\u001b[49m==\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'inbrowser' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import gradio as gr\n",
+    "\n",
+    "# Global game state\n",
+    "game = None\n",
+    "current_turn = 0\n",
+    "\n",
+    "def initialize_game():\n",
+    "    \"\"\"Initialize the game with default settings\"\"\"\n",
+    "    global game, current_turn\n",
+    "    game = GeopoliticsGame(\n",
+    "        player_models=[\n",
+    "            \"gemma3:4b\",\n",
+    "            \"gemma3:4b\",\n",
+    "            \"gemma3:4b\",\n",
+    "            \"gemma3:4b\",\n",
+    "            \"gemma3:4b\"\n",
+    "        ],\n",
+    "        country_names=[\"Avalon\", \"Borealis\", \"Crestfall\", \"Dawnhold\", \"Elysium\"],\n",
+    "        alliances=[\"Red Team\", \"Blue League\", \"Red Team\", \"Blue League\", \"Red Team\"],\n",
+    "        starting_territories=[10, 10, 10, 10, 10],\n",
+    "        ollama_client=ollama\n",
+    "    )\n",
+    "    current_turn = 0\n",
+    "    return \"Game initialized! Click 'Next Turn' to start.\", \"\", \"\", \"\", \"\", \"\", \"\"\n",
+    "\n",
+    "def advance_turn():\n",
+    "    \"\"\"Advance to the next turn and return outputs for all textboxes\"\"\"\n",
+    "    global game, current_turn\n",
+    "    \n",
+    "    if game is None:\n",
+    "        return \"Please initialize the game first!\", \"\", \"\", \"\", \"\", \"\", \"\"\n",
+    "    \n",
+    "    current_turn += 1\n",
+    "    proposer_id = (current_turn - 1) % 5\n",
+    "    proposer = game.players[proposer_id]\n",
+    "    \n",
+    "    # Collect turn information\n",
+    "    turn_info = f\"=== Turn {current_turn}: {proposer['country']}'s turn ===\\n\\n\"\n",
+    "    \n",
+    "    # Get proposal\n",
+    "    target_id, proposal_speech = game.get_proposal(proposer_id)\n",
+    "    target = game.country_names[target_id]\n",
+    "    \n",
+    "    # Store player responses\n",
+    "    player_responses = [\"\"] * 5\n",
+    "    player_responses[proposer_id] = f\"PROPOSAL: Take 1 territory from {target}\\n\"\n",
+    "    if proposal_speech:\n",
+    "        player_responses[proposer_id] += f\"Speech: {proposal_speech}\"\n",
+    "    \n",
+    "    # Get votes from all players\n",
+    "    votes = []\n",
+    "    for i in range(5):\n",
+    "        vote_data = game.get_vote(i, proposer_id, target_id, proposal_speech)\n",
+    "        votes.append(vote_data)\n",
+    "        \n",
+    "        vote_str = vote_data.get('vote', 'No') if isinstance(vote_data, dict) else vote_data\n",
+    "        speech_str = vote_data.get('speech', '') if isinstance(vote_data, dict) else ''\n",
+    "        \n",
+    "        if i != proposer_id:\n",
+    "            player_responses[i] = f\"VOTE: {vote_str}\\n\"\n",
+    "            if speech_str:\n",
+    "                player_responses[i] += f\"Speech: {speech_str}\"\n",
+    "    \n",
+    "    # Count weighted votes\n",
+    "    yes_count = sum(game.territories[i] for i, v in enumerate(votes) \n",
+    "                    if (v.get('vote', 'No') if isinstance(v, dict) else v) == \"Yes\")\n",
+    "    no_count = sum(game.territories[i] for i, v in enumerate(votes) \n",
+    "                   if (v.get('vote', 'No') if isinstance(v, dict) else v) == \"No\")\n",
+    "    passed = yes_count > no_count\n",
+    "    \n",
+    "    # Execute territory transfer\n",
+    "    if passed and game.territories[target_id] > 0:\n",
+    "        game.territories[proposer_id] += 1\n",
+    "        game.territories[target_id] -= 1\n",
+    "    \n",
+    "    # Store turn data\n",
+    "    turn_data = {\n",
+    "        'turn': current_turn,\n",
+    "        'proposer_id': proposer_id,\n",
+    "        'target_id': target_id,\n",
+    "        'proposal_speech': proposal_speech,\n",
+    "        'votes': votes,\n",
+    "        'yes_count': yes_count,\n",
+    "        'no_count': no_count,\n",
+    "        'passed': passed,\n",
+    "        'territories_after': game.territories.copy()\n",
+    "    }\n",
+    "    game.history.append(turn_data)\n",
+    "    \n",
+    "    # Build history summary\n",
+    "    history = f\"Turn {current_turn}: {proposer['country']} → {target}\\n\"\n",
+    "    history += f\"Vote: {yes_count}-{no_count} ({'PASSED' if passed else 'FAILED'})\\n\\n\"\n",
+    "    history += \"Current Standings:\\n\"\n",
+    "    for i, (country, territories) in enumerate(zip(game.country_names, game.territories)):\n",
+    "        alliance = game.alliances[i]\n",
+    "        history += f\"  {country}: {territories} territories ({alliance})\\n\"\n",
+    "    \n",
+    "    # Calculate alliance totals\n",
+    "    alliance_totals = {}\n",
+    "    for i in range(5):\n",
+    "        alliance = game.alliances[i]\n",
+    "        if alliance not in alliance_totals:\n",
+    "            alliance_totals[alliance] = 0\n",
+    "        alliance_totals[alliance] += game.territories[i]\n",
+    "    \n",
+    "    history += \"\\nAlliance Totals:\\n\"\n",
+    "    for alliance, total in sorted(alliance_totals.items(), key=lambda x: x[1], reverse=True):\n",
+    "        history += f\"  {alliance}: {total} territories\\n\"\n",
+    "    \n",
+    "    return (\n",
+    "        turn_info,\n",
+    "        player_responses[0],\n",
+    "        player_responses[1],\n",
+    "        player_responses[2],\n",
+    "        player_responses[3],\n",
+    "        player_responses[4],\n",
+    "        history\n",
+    "    )\n",
+    "\n",
+    "# Create Gradio interface\n",
+    "with gr.Blocks(title=\"Geopolitics Game\") as demo:\n",
+    "    gr.Markdown(\"# 🌍 Geopolitics Game - Alliance Territory Battle\")\n",
+    "    gr.Markdown(\"Watch 5 AI players compete for territories in team-based strategic gameplay!\")\n",
+    "    \n",
+    "    with gr.Row():\n",
+    "        init_btn = gr.Button(\"Initialize Game\", variant=\"secondary\")\n",
+    "        next_btn = gr.Button(\"Next Turn\", variant=\"primary\")\n",
+    "    \n",
+    "    turn_info = gr.Textbox(label=\"Turn Information\", lines=2, interactive=False)\n",
+    "    \n",
+    "    gr.Markdown(\"## Player Responses\")\n",
+    "    with gr.Row():\n",
+    "        player1 = gr.Textbox(label=\"Avalon (Red Team)\", lines=4, interactive=False)\n",
+    "        player2 = gr.Textbox(label=\"Borealis (Blue League)\", lines=4, interactive=False)\n",
+    "        player3 = gr.Textbox(label=\"Crestfall (Red Team)\", lines=4, interactive=False)\n",
+    "    \n",
+    "    with gr.Row():\n",
+    "        player4 = gr.Textbox(label=\"Dawnhold (Blue League)\", lines=4, interactive=False)\n",
+    "        player5 = gr.Textbox(label=\"Elysium (Red Team)\", lines=4, interactive=False)\n",
+    "    \n",
+    "    gr.Markdown(\"## Game History & Standings\")\n",
+    "    history = gr.Textbox(label=\"Current Status\", lines=12, interactive=False)\n",
+    "    \n",
+    "    # Button actions\n",
+    "    init_btn.click(\n",
+    "        fn=initialize_game,\n",
+    "        outputs=[turn_info, player1, player2, player3, player4, player5, history]\n",
+    "    )\n",
+    "    \n",
+    "    next_btn.click(\n",
+    "        fn=advance_turn,\n",
+    "        outputs=[turn_info, player1, player2, player3, player4, player5, history]\n",
+    "    )\n",
+    "\n",
+    "# Launch the interface\n",
+    "demo.launch()"
    ]
   },
   {
