--- a/geopolitics3.ipynb
+++ b/geopolitics3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "f95ede3b",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "8b1553b3",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "cd417d40",
    "metadata": {},
    "outputs": [],
@@ -156,6 +156,21 @@
     "        \n",
     "        return context\n",
     "    \n",
+    "    def fix_smart_quotes(self, text):\n",
+    "        \"\"\"Replace smart quotes with regular quotes for JSON parsing\"\"\"\n",
+    "        # Replace various quote characters with standard quotes\n",
+    "        replacements = {\n",
+    "            '\"': '\"',  # Left double quotation mark\n",
+    "            '\"': '\"',  # Right double quotation mark\n",
+    "            '„': '\"',  # Double low-9 quotation mark\n",
+    "            '‟': '\"',  # Double high-reversed-9 quotation mark\n",
+    "            '”': '\"',  # Right double quotation mark\n",
+    "            '“': '\"',  # Left double quotation mark\n",
+    "        }\n",
+    "        for old, new in replacements.items():\n",
+    "            text = text.replace(old, new)\n",
+    "        return text\n",
+    "    \n",
     "    def _get_alliance_instruction(self, player_id, context_type, proposer_id=None, target_id=None):\n",
     "        \"\"\"\n",
     "        Generate instruction text based on alliance dynamics.\n",
@@ -241,6 +256,8 @@
     "                elif \"```\" in response_text:\n",
     "                    response_text = response_text.split(\"```\")[1].split(\"```\")[0].strip()\n",
     "                \n",
+    "                response_text = self.fix_smart_quotes(response_text)\n",
+    "\n",
     "                proposal_data = json.loads(response_text)\n",
     "                proposal_country = proposal_data.get(\"Proposal\", \"\").strip()\n",
     "                speech = proposal_data.get(\"Speech\", \"\").strip()\n",
@@ -344,6 +361,8 @@
     "                elif \"```\" in response_text:\n",
     "                    response_text = response_text.split(\"```\")[1].split(\"```\")[0].strip()\n",
     "                \n",
+    "                response_text = self.fix_smart_quotes(response_text)\n",
+    "\n",
     "                vote_data = json.loads(response_text)\n",
     "                vote = vote_data.get(\"Vote\", \"No\").strip()\n",
     "                speech = vote_data.get(\"Speech\", \"\").strip()\n",
@@ -515,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "62482392",
    "metadata": {},
    "outputs": [],
@@ -554,15 +573,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7862\n",
-      "* To create a public link, set `share=True` in `launch()`.\n",
+      "* Running on local URL:  http://127.0.0.1:7866\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7866/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -575,7 +593,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -583,28 +601,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Could not parse JSON from Avalon: Unterminated string starting at: line 1 column 27 (char 26)\n",
-      "  Response was: {\"Vote\": \"Yes\", \"Speech\": \"Comrades! This isn't about petty squabbles; it's about strategic advantag...\n",
-      "Warning: Could not parse JSON from Dawnhold: Invalid control character at: line 3 column 568 (char 585)\n",
-      "  Response was: {\n",
-      "  \"Vote\": \"No\",\n",
-      "  \"Speech\": \"Hold! This proposal is fundamentally flawed and risks destabilizing t...\n",
-      "Warning: Could not parse JSON from Dawnhold: Invalid control character at: line 3 column 568 (char 585)\n",
-      "  Response was: {\n",
-      "  \"Vote\": \"No\",\n",
-      "  \"Speech\": \"Hold! This proposal is fundamentally flawed and risks destabilizing t...\n",
-      "Warning: Could not parse JSON from Avalon: Unterminated string starting at: line 1 column 26 (char 25)\n",
-      "  Response was: {\"Vote\": \"No\", \"Speech\": \"Friends, with all due respect to Borealis, this proposal is deeply concern...\n",
-      "Warning: Could not parse JSON from Avalon: Unterminated string starting at: line 1 column 26 (char 25)\n",
-      "  Response was: {\"Vote\": \"No\", \"Speech\": \"Friends, with all due respect to Borealis, this proposal is deeply concern...\n",
-      "Warning: Could not parse JSON from Crestfall: Unterminated string starting at: line 1 column 26 (char 25)\n",
-      "  Response was: {\"Vote\": \"No\", \"Speech\": \"Friends, I appreciate Borealis’ concerns, but this proposal is profoundly ...\n",
-      "Warning: Could not parse JSON from Crestfall: Unterminated string starting at: line 1 column 26 (char 25)\n",
-      "  Response was: {\"Vote\": \"No\", \"Speech\": \"Friends, I appreciate Borealis’ concerns, but this proposal is profoundly ...\n",
-      "Warning: Could not parse JSON from Dawnhold: Unterminated string starting at: line 1 column 27 (char 26)\n",
-      "  Response was: {\"Vote\": \"Yes\", \"Speech\": \"I wholeheartedly support this proposal. While I appreciate Crestfall’s ef...\n",
-      "Warning: Could not parse JSON from Dawnhold: Unterminated string starting at: line 1 column 27 (char 26)\n",
-      "  Response was: {\"Vote\": \"Yes\", \"Speech\": \"I wholeheartedly support this proposal. While I appreciate Crestfall’s ef...\n"
+      "Error querying Avalon: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
+      "Error querying Avalon: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
+      "Error querying Avalon: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
+      "Error querying Borealis: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
+      "Error querying Borealis: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
+      "Error querying Crestfall: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
+      "Error querying Crestfall: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
+      "Error querying Dawnhold: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
+      "Error querying Dawnhold: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
+      "Error querying Elysium: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
+      "Error querying Elysium: fix_smart_quotes() missing 1 required positional argument: 'text'\n"
      ]
     }
    ],
@@ -633,6 +640,21 @@
     "    )\n",
     "    current_turn = 0\n",
     "    return \"Game initialized! Click 'Next Turn' to start.\", \"\", \"\", \"\", \"\", \"\", \"\"\n",
+    "\n",
+    "def fix_smart_quotes(text):\n",
+    "        \"\"\"Replace smart quotes with regular quotes for JSON parsing\"\"\"\n",
+    "        # Replace various quote characters with standard quotes\n",
+    "        replacements = {\n",
+    "            '\"': '\"',  # Left double quotation mark\n",
+    "            '\"': '\"',  # Right double quotation mark\n",
+    "            '„': '\"',  # Double low-9 quotation mark\n",
+    "            '‟': '\"',  # Double high-reversed-9 quotation mark\n",
+    "            '”': '\"',  # Right double quotation mark\n",
+    "            '“': '\"',  # Left double quotation mark\n",
+    "        }\n",
+    "        for old, new in replacements.items():\n",
+    "            text = text.replace(old, new)\n",
+    "        return text\n",
     "\n",
     "def advance_turn():\n",
     "    \"\"\"Advance to the next turn and return outputs for all textboxes\"\"\"\n",
@@ -695,6 +717,9 @@
     "                temp_text = temp_text.split(\"```json\")[1].split(\"```\")[0].strip()\n",
     "            elif \"```\" in temp_text:\n",
     "                temp_text = temp_text.split(\"```\")[1].split(\"```\")[0].strip()\n",
+    "            \n",
+    "            # Fix smart quotes before parsing\n",
+    "            temp_text = fix_smart_quotes(temp_text)\n",
     "            \n",
     "            proposal_data = json.loads(temp_text)\n",
     "            proposal_country = proposal_data.get(\"Proposal\", \"\").strip()\n",
@@ -794,6 +819,9 @@
     "                    temp_text_vote = temp_text_vote.split(\"```json\")[1].split(\"```\")[0].strip()\n",
     "                elif \"```\" in temp_text_vote:\n",
     "                    temp_text_vote = temp_text_vote.split(\"```\")[1].split(\"```\")[0].strip()\n",
+    "                \n",
+    "                # Fix smart quotes before parsing\n",
+    "                temp_text_vote = fix_smart_quotes(temp_text_vote)\n",
     "                \n",
     "                vote_data_parsed = json.loads(temp_text_vote)\n",
     "                vote = vote_data_parsed.get(\"Vote\", \"No\").strip()\n",
