feat: geopolitics game

--- a/geopolitics3.ipynb
+++ b/geopolitics3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "f95ede3b",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "8b1553b3",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "cd417d40",
    "metadata": {},
    "outputs": [],
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "62482392",
    "metadata": {},
    "outputs": [],
@@ -573,14 +573,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7866\n",
+      "* Running on local URL:  http://127.0.0.1:7868\n",
+      "* To create a public link, set `share=True` in `launch()`.\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7866/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7868/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -593,26 +594,9 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error querying Avalon: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
-      "Error querying Avalon: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
-      "Error querying Avalon: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
-      "Error querying Borealis: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
-      "Error querying Borealis: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
-      "Error querying Crestfall: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
-      "Error querying Crestfall: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
-      "Error querying Dawnhold: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
-      "Error querying Dawnhold: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
-      "Error querying Elysium: fix_smart_quotes() missing 1 required positional argument: 'text'\n",
-      "Error querying Elysium: fix_smart_quotes() missing 1 required positional argument: 'text'\n"
-     ]
     }
    ],
    "source": [
@@ -657,11 +641,12 @@
     "        return text\n",
     "\n",
     "def advance_turn():\n",
-    "    \"\"\"Advance to the next turn and return outputs for all textboxes\"\"\"\n",
+    "    \"\"\"Advance to the next turn and return outputs for all textboxes - yields updates as they come\"\"\"\n",
     "    global game, current_turn\n",
     "    \n",
     "    if game is None:\n",
-    "        return \"Please initialize the game first!\", \"\", \"\", \"\", \"\", \"\", \"\"\n",
+    "        yield \"Please initialize the game first!\", \"\", \"\", \"\", \"\", \"\", \"\"\n",
+    "        return\n",
     "    \n",
     "    current_turn += 1\n",
     "    proposer_id = (current_turn - 1) % 5\n",
@@ -673,6 +658,9 @@
     "    # Store player responses and raw responses for error display\n",
     "    player_responses = [\"\"] * 5\n",
     "    player_raw_responses = [None] * 5\n",
+    "    \n",
+    "    # Yield initial state with turn info\n",
+    "    yield (turn_info, \"\", \"\", \"\", \"\", \"\", \"\")\n",
     "    \n",
     "    # Get proposal - inline to capture raw response\n",
     "    player = game.players[proposer_id]\n",
@@ -766,6 +754,17 @@
     "            player_responses[proposer_id] += f\"Speech: {proposal_speech}\"\n",
     "    else:\n",
     "        player_responses[proposer_id] = f\"PROPOSAL: Take 1 territory from {target}\\n\\n[JSON Parse Error - Raw Response]:\\n{player_raw_responses[proposer_id]}\"\n",
+    "    \n",
+    "    # Yield update with proposer's response\n",
+    "    yield (\n",
+    "        turn_info,\n",
+    "        player_responses[0] if proposer_id == 0 else \"\",\n",
+    "        player_responses[1] if proposer_id == 1 else \"\",\n",
+    "        player_responses[2] if proposer_id == 2 else \"\",\n",
+    "        player_responses[3] if proposer_id == 3 else \"\",\n",
+    "        player_responses[4] if proposer_id == 4 else \"\",\n",
+    "        \"\"\n",
+    "    )\n",
     "    \n",
     "    # Get votes from all players - inline to capture raw responses\n",
     "    votes = []\n",
@@ -861,6 +860,17 @@
     "                    player_responses[i] += f\"Speech: {speech_str}\"\n",
     "            else:\n",
     "                player_responses[i] = f\"VOTE: {vote_str}\\n\\n[JSON Parse Error - Raw Response]:\\n{player_raw_responses[i]}\"\n",
+    "        \n",
+    "        # Yield update after each player responds\n",
+    "        yield (\n",
+    "            turn_info,\n",
+    "            player_responses[0],\n",
+    "            player_responses[1],\n",
+    "            player_responses[2],\n",
+    "            player_responses[3],\n",
+    "            player_responses[4],\n",
+    "            \"\"\n",
+    "        )\n",
     "    \n",
     "    # Count weighted votes\n",
     "    yes_count = sum(game.territories[i] for i, v in enumerate(votes) \n",
@@ -908,7 +918,8 @@
     "    for alliance, total in sorted(alliance_totals.items(), key=lambda x: x[1], reverse=True):\n",
     "        history += f\"  {alliance}: {total} territories\\n\"\n",
     "    \n",
-    "    return (\n",
+    "    # Final yield with complete history\n",
+    "    yield (\n",
     "        turn_info,\n",
     "        player_responses[0],\n",
     "        player_responses[1],\n",
@@ -920,7 +931,7 @@
     "\n",
     "# Create Gradio interface\n",
     "with gr.Blocks(title=\"Geopolitics Game\") as demo:\n",
-    "    gr.Markdown(\"# 🌍 Geopolitics Game - Alliance Territory Battle\")\n",
+    "    gr.Markdown(\"# 🌍 Geopolitics Game\")\n",
     "    gr.Markdown(\"Watch 5 AI players compete for territories in team-based strategic gameplay!\")\n",
     "    \n",
     "    with gr.Row():\n",
@@ -964,6 +975,12 @@
    "source": [
     "Alliance-based voting with weighted votes - will alliances coordinate effectively?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9da14aa9",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
