incomplete: social dysfunction simulation

--- a/social-dysfunction.ipynb
+++ b/social-dysfunction.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d0e4a9",
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd6084d4",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,31 +25,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddeecb58",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Player:\n",
     "    def __init__(self, name, traits, relations):\n",
     "        self.name = name\n",
-    "        self.traits = traits\n",
-    "        self.relations = relations\n",
+    "        self.traits = traits  # Dict of trait descriptions\n",
+    "        self.relations = relations  # Dict mapping player names to Relation objects\n",
     "\n",
-    "    def respond(self, prompt):\n",
+    "    def get_personality_prompt(self):\n",
+    "        \"\"\"Generate a personality description for the LLM\"\"\"\n",
+    "        traits_desc = \"\\n\".join([f\"- {key}: {value}\" for key, value in self.traits.items()])\n",
+    "        relations_desc = \"\\n\".join([\n",
+    "            f\"- {name}: {rel.value}/5 ({'friend' if rel.value > 0 else 'enemy' if rel.value < 0 else 'neutral'})\"\n",
+    "            for name, rel in self.relations.items()\n",
+    "        ])\n",
+    "        \n",
+    "        return f\"\"\"You are {self.name}, a person with the following personality traits:\n",
+    "{traits_desc}\n",
+    "\n",
+    "Your current relationships with others:\n",
+    "{relations_desc}\n",
+    "\n",
+    "Play this character authentically. Your personality traits should influence how you communicate and make decisions. Your relationships affect how receptive you are to others' ideas.\"\"\"\n",
+    "\n",
+    "    def respond(self, prompt, conversation_history):\n",
+    "        \"\"\"Generate a response based on personality and current situation\"\"\"\n",
+    "        messages = [\n",
+    "            {\"role\": \"system\", \"content\": self.get_personality_prompt()},\n",
+    "        ]\n",
+    "        \n",
+    "        # Add conversation history\n",
+    "        messages.extend(conversation_history)\n",
+    "        \n",
+    "        # Add current prompt\n",
+    "        messages.append({\"role\": \"user\", \"content\": prompt})\n",
+    "        \n",
     "        response = openai.chat.completions.create(\n",
-    "            model=\"gpt-5-nano\",\n",
-    "            messages=[\n",
-    "                {\"role\": \"system\", \"content\": \"You are a participant in a social interaction simulation.\"},\n",
-    "                {\"role\": \"user\", \"content\": prompt}\n",
-    "            ]\n",
+    "            model=\"gpt-4o-mini\",\n",
+    "            messages=messages,\n",
+    "            temperature=0.8\n",
     "        )\n",
-    "        return response.choices[0].message.content"
+    "        return response.choices[0].message.content\n",
+    "\n",
+    "    def update_relation(self, other_player_name, change):\n",
+    "        \"\"\"Update relationship value, clamped between -5 and +5\"\"\"\n",
+    "        if other_player_name in self.relations:\n",
+    "            self.relations[other_player_name].value = max(-5, min(5, \n",
+    "                self.relations[other_player_name].value + change))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "039722af",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +88,277 @@
     "    def __init__(self, other_player, value):\n",
     "        self.other_player = other_player\n",
     "        self.value = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the simulation\n",
+    "scenario = \"The group needs to decide where to eat lunch. Everyone has different preferences and dietary restrictions.\"\n",
+    "\n",
+    "sim = Simulation(players, scenario)\n",
+    "sim.run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create 4 players with dysfunctional traits\n",
+    "\n",
+    "# Player 1: The Stubborn One\n",
+    "alice_relations = {}\n",
+    "\n",
+    "# Player 2: The Passive-Aggressive One  \n",
+    "bob_relations = {}\n",
+    "\n",
+    "# Player 3: The Drama Queen/King\n",
+    "carol_relations = {}\n",
+    "\n",
+    "# Player 4: The Know-It-All\n",
+    "dave_relations = {}\n",
+    "\n",
+    "# Initialize players first (without relations)\n",
+    "alice = Player(\n",
+    "    name=\"Alice\",\n",
+    "    traits={\n",
+    "        \"Stubbornness\": \"Extremely rigid in opinions, refuses to compromise\",\n",
+    "        \"Directness\": \"Blunt and confrontational in communication\",\n",
+    "        \"Confidence\": \"Believes their way is always the right way\"\n",
+    "    },\n",
+    "    relations=alice_relations\n",
+    ")\n",
+    "\n",
+    "bob = Player(\n",
+    "    name=\"Bob\",\n",
+    "    traits={\n",
+    "        \"Passive-Aggressiveness\": \"Never directly states disagreement, uses sarcasm and backhanded compliments\",\n",
+    "        \"Avoidance\": \"Dislikes confrontation, agrees outwardly but undermines decisions\",\n",
+    "        \"Resentment\": \"Holds grudges and brings up past issues\"\n",
+    "    },\n",
+    "    relations=bob_relations\n",
+    ")\n",
+    "\n",
+    "carol = Player(\n",
+    "    name=\"Carol\",\n",
+    "    traits={\n",
+    "        \"Dramatic\": \"Blows everything out of proportion, sees slights where none exist\",\n",
+    "        \"Emotional\": \"Takes everything personally, reactions are extreme\",\n",
+    "        \"Attention-Seeking\": \"Needs to be the center of discussion, dismisses others' concerns\"\n",
+    "    },\n",
+    "    relations=carol_relations\n",
+    ")\n",
+    "\n",
+    "dave = Player(\n",
+    "    name=\"Dave\",\n",
+    "    traits={\n",
+    "        \"Superiority\": \"Acts intellectually superior, condescending to others\",\n",
+    "        \"Dismissiveness\": \"Quickly dismisses others' ideas as inferior\",\n",
+    "        \"Argumentative\": \"Must prove others wrong, debates every point\"\n",
+    "    },\n",
+    "    relations=dave_relations\n",
+    ")\n",
+    "\n",
+    "# Now set up the relationships (starting slightly negative for dysfunction)\n",
+    "alice_relations.update({\n",
+    "    \"Bob\": Relation(bob, -1),\n",
+    "    \"Carol\": Relation(carol, 0),\n",
+    "    \"Dave\": Relation(dave, -2)\n",
+    "})\n",
+    "\n",
+    "bob_relations.update({\n",
+    "    \"Alice\": Relation(alice, -1),\n",
+    "    \"Carol\": Relation(carol, 1),\n",
+    "    \"Dave\": Relation(dave, 0)\n",
+    "})\n",
+    "\n",
+    "carol_relations.update({\n",
+    "    \"Alice\": Relation(alice, 0),\n",
+    "    \"Bob\": Relation(bob, 1),\n",
+    "    \"Dave\": Relation(dave, -1)\n",
+    "})\n",
+    "\n",
+    "dave_relations.update({\n",
+    "    \"Alice\": Relation(alice, -2),\n",
+    "    \"Bob\": Relation(bob, 0),\n",
+    "    \"Carol\": Relation(carol, -1)\n",
+    "})\n",
+    "\n",
+    "players = [alice, bob, carol, dave]\n",
+    "print(\"Players initialized!\")\n",
+    "print(\"\\nStarting relationships:\")\n",
+    "for player in players:\n",
+    "    print(f\"\\n{player.name}:\")\n",
+    "    for other_name, relation in player.relations.items():\n",
+    "        print(f\"  → {other_name}: {relation.value}/5\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Simulation:\n",
+    "    def __init__(self, players, scenario):\n",
+    "        self.players = players\n",
+    "        self.scenario = scenario\n",
+    "        self.conversation_history = []\n",
+    "        self.round_number = 0\n",
+    "        self.max_rounds = 15\n",
+    "        \n",
+    "    def check_win_condition(self):\n",
+    "        \"\"\"Check if all players have reached consensus\"\"\"\n",
+    "        prompt = \"\"\"Based on the conversation so far, have all participants reached a clear agreement? \n",
+    "        Respond with only 'YES' or 'NO'.\"\"\"\n",
+    "        \n",
+    "        response = openai.chat.completions.create(\n",
+    "            model=\"gpt-4o-mini\",\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": \"You are evaluating whether a group has reached consensus.\"},\n",
+    "                {\"role\": \"user\", \"content\": f\"Conversation:\\n{self._format_history()}\\n\\n{prompt}\"}\n",
+    "            ],\n",
+    "            temperature=0.3\n",
+    "        )\n",
+    "        \n",
+    "        return \"YES\" in response.choices[0].message.content.upper()\n",
+    "    \n",
+    "    def check_lose_condition(self):\n",
+    "        \"\"\"Check if any player has reached -5 with another\"\"\"\n",
+    "        for player in self.players:\n",
+    "            for other_name, relation in player.relations.items():\n",
+    "                if relation.value <= -5:\n",
+    "                    return True, f\"{player.name} has reached maximum hatred (-5) toward {other_name}\"\n",
+    "        return False, None\n",
+    "    \n",
+    "    def _format_history(self):\n",
+    "        \"\"\"Format conversation history for display\"\"\"\n",
+    "        return \"\\n\".join([f\"{msg['role']}: {msg['content']}\" for msg in self.conversation_history])\n",
+    "    \n",
+    "    def evaluate_interaction(self, speaker_name, response):\n",
+    "        \"\"\"Use LLM to evaluate how the response affects relationships\"\"\"\n",
+    "        for player in self.players:\n",
+    "            if player.name == speaker_name:\n",
+    "                continue\n",
+    "                \n",
+    "            eval_prompt = f\"\"\"You are {player.name}. {speaker_name} just said: \"{response}\"\n",
+    "\n",
+    "Based on your personality and current relationship with {speaker_name} ({player.relations[speaker_name].value}/5), how does this statement make you feel?\n",
+    "\n",
+    "Consider:\n",
+    "- Did they respect your opinion?\n",
+    "- Did they dismiss or insult you?\n",
+    "- Did they show understanding?\n",
+    "- Did they compromise or stay rigid?\n",
+    "\n",
+    "Respond with a number from -2 to +2 indicating the change in your relationship:\n",
+    "-2: Very negative, insulting or dismissive\n",
+    "-1: Slightly negative, inconsiderate\n",
+    "0: Neutral, no significant impact\n",
+    "+1: Slightly positive, respectful\n",
+    "+2: Very positive, showing empathy and understanding\n",
+    "\n",
+    "Respond with ONLY the number.\"\"\"\n",
+    "\n",
+    "            eval_response = openai.chat.completions.create(\n",
+    "                model=\"gpt-4o-mini\",\n",
+    "                messages=[\n",
+    "                    {\"role\": \"system\", \"content\": player.get_personality_prompt()},\n",
+    "                    {\"role\": \"user\", \"content\": eval_prompt}\n",
+    "                ],\n",
+    "                temperature=0.5\n",
+    "            )\n",
+    "            \n",
+    "            try:\n",
+    "                change = int(eval_response.choices[0].message.content.strip())\n",
+    "                change = max(-2, min(2, change))  # Clamp to -2 to +2\n",
+    "                player.update_relation(speaker_name, change)\n",
+    "                \n",
+    "                if change != 0:\n",
+    "                    print(f\"  → {player.name}'s feeling toward {speaker_name}: {change:+d} (now {player.relations[speaker_name].value}/5)\")\n",
+    "            except:\n",
+    "                pass  # If we can't parse the evaluation, skip it\n",
+    "    \n",
+    "    def run_round(self):\n",
+    "        \"\"\"Run one round where each player speaks\"\"\"\n",
+    "        self.round_number += 1\n",
+    "        print(f\"\\n{'='*60}\")\n",
+    "        print(f\"ROUND {self.round_number}\")\n",
+    "        print(f\"{'='*60}\\n\")\n",
+    "        \n",
+    "        for player in self.players:\n",
+    "            prompt = f\"\"\"Scenario: {self.scenario}\n",
+    "\n",
+    "This is round {self.round_number}. Respond to the situation and others' comments. Be authentic to your personality.\n",
+    "Keep your response concise (2-3 sentences max).\"\"\"\n",
+    "            \n",
+    "            response = player.respond(prompt, self.conversation_history)\n",
+    "            \n",
+    "            print(f\"{player.name}: {response}\\n\")\n",
+    "            \n",
+    "            # Add to history\n",
+    "            self.conversation_history.append({\n",
+    "                \"role\": \"assistant\",\n",
+    "                \"content\": f\"{player.name}: {response}\"\n",
+    "            })\n",
+    "            \n",
+    "            # Evaluate how this affects relationships\n",
+    "            self.evaluate_interaction(player.name, response)\n",
+    "            \n",
+    "            # Check lose condition after each player speaks\n",
+    "            lost, reason = self.check_lose_condition()\n",
+    "            if lost:\n",
+    "                return \"LOSE\", reason\n",
+    "        \n",
+    "        # Check win condition after the round\n",
+    "        if self.check_win_condition():\n",
+    "            return \"WIN\", \"All players reached consensus!\"\n",
+    "        \n",
+    "        if self.round_number >= self.max_rounds:\n",
+    "            return \"TIMEOUT\", \"Maximum rounds reached without consensus\"\n",
+    "        \n",
+    "        return \"CONTINUE\", None\n",
+    "    \n",
+    "    def run(self):\n",
+    "        \"\"\"Run the full simulation\"\"\"\n",
+    "        print(f\"\\n{'#'*60}\")\n",
+    "        print(f\"SOCIAL DYSFUNCTION SIMULATION\")\n",
+    "        print(f\"{'#'*60}\\n\")\n",
+    "        print(f\"Scenario: {self.scenario}\\n\")\n",
+    "        \n",
+    "        print(\"Players:\")\n",
+    "        for player in self.players:\n",
+    "            print(f\"\\n{player.name}:\")\n",
+    "            for trait, desc in player.traits.items():\n",
+    "                print(f\"  • {trait}: {desc}\")\n",
+    "        \n",
+    "        print(f\"\\n{'#'*60}\\n\")\n",
+    "        \n",
+    "        while True:\n",
+    "            status, message = self.run_round()\n",
+    "            \n",
+    "            if status != \"CONTINUE\":\n",
+    "                print(f\"\\n{'='*60}\")\n",
+    "                print(f\"GAME OVER: {status}\")\n",
+    "                print(f\"{'='*60}\")\n",
+    "                print(f\"\\n{message}\\n\")\n",
+    "                \n",
+    "                # Show final relationships\n",
+    "                print(\"Final Relationships:\")\n",
+    "                for player in self.players:\n",
+    "                    print(f\"\\n{player.name}:\")\n",
+    "                    for other_name, relation in player.relations.items():\n",
+    "                        print(f\"  → {other_name}: {relation.value}/5\")\n",
+    "                \n",
+    "                break\n"
    ]
   }
  ],
