--- a/test-cuda.ipynb
+++ b/test-cuda.ipynb
@@ -9,6 +9,9 @@
    "source": [
     "import torch\n",
     "\n",
+    "print(torch.__version__)\n",
+    "print(torch.version.cuda)\n",
+    "\n",
     "# Check if CUDA is available\n",
     "print(f\"CUDA available: {torch.cuda.is_available()}\")\n",
     "\n",
@@ -36,6 +39,14 @@
     "    x_gpu = torch.rand(3, 3).cuda()\n",
     "    print(f\"GPU tensor device: {x_gpu.device}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
