feat: finetune local model

--- a/test-cuda.ipynb
+++ b/test-cuda.ipynb
@@ -46,6 +46,18 @@
    "id": "2",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "capability = torch.cuda.get_device_capability()\n",
+    "use_bf16 = capability[0] >= 8 # bfloat16 support\n",
+    "print(f\"bfloat16 support: {use_bf16}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
